--- a/src/Napster.CLI/Napster.CLI.csproj
+++ b/src/Napster.CLI/Napster.CLI.csproj
@@ -26,4 +26,12 @@
 		</Content>
 	</ItemGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<OutputPath>../../bin</OutputPath>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<OutputPath>../../bin</OutputPath>
+	</PropertyGroup>
+
 </Project>
